--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,26 @@
         "php": ">=7.3",
         "composer/installers": "~1.0",
         "nesbot/carbon": "^2.24"
+    },
+    "require-dev": {
+        "lucatume/wp-browser": "^2.2",
+        "se/selenium-server-standalone": "^3.12",
+        "enm1989/chromedriver": "^77.0",
+        "wp-cli/wp-cli-bundle": "^2.3"
+    },
+    "scripts": {
+        "test": [
+            "./run_tests.sh"
+        ],
+        "run-tests": [
+            "@test-unit",
+            "@test-wpunit",
+            "@test-functional",
+            "@test-acceptance"
+        ],
+        "test-acceptance": "codecept run acceptance",
+        "test-wpunit": "codecept run wpunit",
+        "test-functional": "codecept run functional",
+        "test-unit": "codecept run unit"
     }
 }
